<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="main.left.LeftFragment">

    <TextView
        android:id="@+id/descriptionTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/margin_material"
        android:text="@string/fragment_left"
        android:textAppearance="@style/TextView"
        app:layout_constraintBottom_toTopOf="@id/deeperButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/deeperButton"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/margin_material"
        android:text="@string/action_deeper"
        app:layout_constraintBottom_toTopOf="@id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/backButton"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_margin="@dimen/margin_material"
        android:text="@string/action_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
